--- a/InplayBet.Web/Views/HowToPlay/Index.cshtml
+++ b/InplayBet.Web/Views/HowToPlay/Index.cshtml
@@ -102,7 +102,16 @@
                 Winning the challenge is not an easy feat. Have a go today and see if you can master the inplay bets.
             </p>
         </div>
-        <div class="video"><img src='@Url.Content("~/Styles/images/betting-video.jpg")' alt=""></div>
+        <div class="video">
+            <video controls="controls" autoplay="autoplay" width="100%" height="400">
+                @*<source type="video/mp4" src="~/Media/Inplay20-HowTo_x264.mp4" />
+                    <source type="video/webm" src="~/Media/Inplay20-HowTo_VP8.webm" />
+                    <source type="video/ogg" src="~/Media/Inplay20-HowTo_libtheora.ogv" />*@
+                <source type="video/mp4" src='@Url.Action("GetVideo", "Base", new { area = "", fileType = @"video/mp4" })' />
+                <source type="video/webm" src='@Url.Action("GetVideo", "Base", new { area = "", fileType = @"video/webm" })' />
+                <source type="video/ogg" src='@Url.Action("GetVideo", "Base", new { area = "", fileType = @"video/ogg" })' />
+            </video>
+        </div>
         <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr1.jpg")' alt="" /></div>
         <div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr2.jpg")' alt="" /></div>
         <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr3.jpg")' alt="" /></div>
