--- a/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
+++ b/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
@@ -64,9 +64,14 @@
                 </li>
                 <li>
                     <input type="submit" value="submit" name="">
+                    @if (Model.ChallengeId > 0)
+                    {
+                        <input type="button" value="Cash Out" name="">
+                    }
                 </li>
                 @*<li>(Please click the "+" button to add your text to our preditctive text database)</li>*@
             </ul>
+
         </div>
 
         @Html.HiddenFor(m => m.BetId)
