--- a/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
+++ b/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
@@ -66,7 +66,7 @@
                     <input type="submit" value="submit" name="">
                     @if (Model.ChallengeId > 0)
                     {
-                        <input type="button" value="Cash Out" name="">
+                        <input type="button" value="Cash Out" onclick="CashOutBet(@Model.ChallengeId)" name="">
                     }
                 </li>
                 @*<li>(Please click the "+" button to add your text to our preditctive text database)</li>*@
