--- a/InplayBet.Web/Views/Shared/_BetSubmissionMailNotification.cshtml
+++ b/InplayBet.Web/Views/Shared/_BetSubmissionMailNotification.cshtml
@@ -1,4 +1,5 @@
 ﻿@using InplayBet.Web.Models
+@using InplayBet.Web.Utilities
 @using System.Globalization
 @model BetNotificationViewModel
 @{Layout = null;}
@@ -13,8 +14,8 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
             <td style="background: #010205; padding: 10px;">
-                <a href="#">
-                    <img src="http://www.inplay20.com/Styles/images/logo.png" width="237" height="66" alt="" border="0" />
+                <a href='@TempData["ProfileUrl"]'>
+                    <img src="@CommonUtility.ResolveServerUrl(VirtualPathUtility.ToAbsolute(Model.User.AvatarPath), false)" width="237" height="66" alt="" border="0" />
                 </a>
             </td>
         </tr>
@@ -95,9 +96,9 @@
                         <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.CreatedOn.ToString("dd/MM/yyyy hh:mm:ss tt", new CultureInfo(Model.User.CultureCode))</td>
                     </tr>
                     @*<tr>
-                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Status:</strong></td>
-                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.BetStatus</td>
-                    </tr>*@
+                            <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Status:</strong></td>
+                            <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.BetStatus</td>
+                        </tr>*@
                 </table>
             </td>
         </tr>
