--- a/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
+++ b/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
@@ -14,7 +14,7 @@
     using (Ajax.BeginForm("InsertNewBet", "Bet", new { area = "" }, new AjaxOptions
     {
         HttpMethod = "POST",
-        OnBegin="InsertUpdateBetBeginHandler()",
+        OnBegin = "InsertUpdateBetBeginHandler()",
         OnSuccess = "InsertUpdateBetSuccessHandler(data, this)",
         OnComplete = "InsertUpdateBetCompleteHandler()"
     }, new { id = "frmInsertBet" }))
@@ -95,86 +95,89 @@
 }
 else
 {
-    using (Ajax.BeginForm("UpdateBetStatus", "Bet", new { area = "" }, new AjaxOptions
+    if (Model.TeamA != null && Model.TeamB != null && Model.Legue != null)
     {
-        HttpMethod = "POST",
-        OnBegin="InsertUpdateBetBeginHandler()",
-        OnSuccess = "InsertUpdateBetSuccessHandler(data, this)",
-        OnComplete = "InsertUpdateBetCompleteHandler()"
-    }, new { id = "frmUpdateBet" }))
-    {
-        <div class="popup-border">
-            <ul class="popup">
-                <li>
-                    <p>Bet @Model.BetNumber.ToString()</p>
-                </li>
-                <li>
-                    <label><strong>Team Names:</strong></label>
-                    <label class="right" style="width:30%;">@Model.TeamA.TeamName</label>
-                    <label class="vs"><strong>vs</strong></label>
-                    <label class="right" style="width:30%; text-align:center;">@Model.TeamB.TeamName</label>
-                </li>
-                <li>
-                    <label><strong>League:</strong></label>
-                    <label class="right">@Model.Legue.LegueName</label>
-                </li>
-                <li>
-                    <label><strong>Bet Type:</strong></label>
-                    <label class="right">@Model.BetType</label>
-                </li>
-                <li>
-                    <label><strong>Odds:</strong></label>
-                    @Html.Label(Model.Odds, new { @class = "right" })
-                </li>
-                <li>
-                    <label><strong>Amount Placed:</strong></label>
-                    <label class="right">@Model.BetPlaced.ToString("C", (new CultureInfo(cultureCode)))</label>
-                </li>
-                <li>
-
-                    <label><strong>Winning Total:</strong></label>
-                    <label class="right">@Model.WiningTotal.ToString("C", (new CultureInfo(cultureCode)))</label>
-                </li>
-
-                @if (betDisplayMode == BetDisplayType.Update.ToString())
-                {
+        using (Ajax.BeginForm("UpdateBetStatus", "Bet", new { area = "" }, new AjaxOptions
+        {
+            HttpMethod = "POST",
+            OnBegin = "InsertUpdateBetBeginHandler()",
+            OnSuccess = "InsertUpdateBetSuccessHandler(data, this)",
+            OnComplete = "InsertUpdateBetCompleteHandler()"
+        }, new { id = "frmUpdateBet" }))
+        {
+            <div class="popup-border">
+                <ul class="popup">
                     <li>
-                        <label><strong>Bet Submitted On:</strong></label>
-                        <label class="right">@Model.CreatedOn.ToString("hh:mm tt", (new CultureInfo(cultureCode)))</label>
+                        <p>Bet @Model.BetNumber.ToString()</p>
                     </li>
                     <li>
-                        <input type="submit" value="@StatusCode.Won.ToString()" name="BetStatus" />
-                        <input type="submit" value="@StatusCode.Lost.ToString()" name="BetStatus" />
-                    </li>
-                }
-                else if (betDisplayMode == BetDisplayType.Read.ToString())
-                {
-                    <li>
-                        <label><strong>Bet Submitted On:</strong></label>
-                        <label class="right">@Model.CreatedOn.ToString("dd/MM/yyyy hh:mm tt", (new CultureInfo(cultureCode)))</label>
+                        <label><strong>Team Names:</strong></label>
+                        <label class="right" style="width:30%;">@Model.TeamA.TeamName</label>
+                        <label class="vs"><strong>vs</strong></label>
+                        <label class="right" style="width:30%; text-align:center;">@Model.TeamB.TeamName</label>
                     </li>
                     <li>
-                        <label><strong>Status:</strong></label>
-                        <label>@Html.Label(Model.BetStatus)</label>
+                        <label><strong>League:</strong></label>
+                        <label class="right">@Model.Legue.LegueName</label>
                     </li>
-                }
+                    <li>
+                        <label><strong>Bet Type:</strong></label>
+                        <label class="right">@Model.BetType</label>
+                    </li>
+                    <li>
+                        <label><strong>Odds:</strong></label>
+                        @Html.Label(Model.Odds, new { @class = "right" })
+                    </li>
+                    <li>
+                        <label><strong>Amount Placed:</strong></label>
+                        <label class="right">@Model.BetPlaced.ToString("C", (new CultureInfo(cultureCode)))</label>
+                    </li>
+                    <li>
 
-            </ul>
-        </div>
+                        <label><strong>Winning Total:</strong></label>
+                        <label class="right">@Model.WiningTotal.ToString("C", (new CultureInfo(cultureCode)))</label>
+                    </li>
 
-        @Html.HiddenFor(m => m.BetId)
-        @Html.HiddenFor(m => m.TeamAId)
-        @Html.HiddenFor(m => m.TeamBId)
-        @Html.HiddenFor(m => m.LegueId)
-        @Html.HiddenFor(m => m.ChallengeId)
-        @Html.HiddenFor(m => m.BetType)
-        @Html.HiddenFor(m => m.BetNumber)
-        @Html.HiddenFor(m => m.Odds)
-        @Html.HiddenFor(m => m.BetStatus)
-        @Html.HiddenFor(m => m.BetPlaced)
-        @Html.HiddenFor(m => m.WiningTotal)
-        @Html.HiddenFor(m => m.StatusId)
-        @Html.HiddenFor(m => m.CreatedBy)
-        @Html.HiddenFor(m => m.CreatedOn)
+                    @if (betDisplayMode == BetDisplayType.Update.ToString())
+                    {
+                        <li>
+                            <label><strong>Bet Submitted On:</strong></label>
+                            <label class="right">@Model.CreatedOn.ToString("hh:mm tt", (new CultureInfo(cultureCode)))</label>
+                        </li>
+                        <li>
+                            <input type="submit" value="@StatusCode.Won.ToString()" name="BetStatus" />
+                            <input type="submit" value="@StatusCode.Lost.ToString()" name="BetStatus" />
+                        </li>
+                    }
+                    else if (betDisplayMode == BetDisplayType.Read.ToString())
+                    {
+                        <li>
+                            <label><strong>Bet Submitted On:</strong></label>
+                            <label class="right">@Model.CreatedOn.ToString("dd/MM/yyyy hh:mm tt", (new CultureInfo(cultureCode)))</label>
+                        </li>
+                        <li>
+                            <label><strong>Status:</strong></label>
+                            <label>@Html.Label(Model.BetStatus)</label>
+                        </li>
+                    }
+
+                </ul>
+            </div>
+
+            @Html.HiddenFor(m => m.BetId)
+            @Html.HiddenFor(m => m.TeamAId)
+            @Html.HiddenFor(m => m.TeamBId)
+            @Html.HiddenFor(m => m.LegueId)
+            @Html.HiddenFor(m => m.ChallengeId)
+            @Html.HiddenFor(m => m.BetType)
+            @Html.HiddenFor(m => m.BetNumber)
+            @Html.HiddenFor(m => m.Odds)
+            @Html.HiddenFor(m => m.BetStatus)
+            @Html.HiddenFor(m => m.BetPlaced)
+            @Html.HiddenFor(m => m.WiningTotal)
+            @Html.HiddenFor(m => m.StatusId)
+            @Html.HiddenFor(m => m.CreatedBy)
+            @Html.HiddenFor(m => m.CreatedOn)
+        }
     }
 }
