--- a/InplayBet.Web/Views/Shared/_UserRank.cshtml
+++ b/InplayBet.Web/Views/Shared/_UserRank.cshtml
@@ -25,6 +25,8 @@
                 return ind.ToString() + "st";
             case 2:
                 return ind.ToString() + "nd";
+            case 3:
+                return ind.ToString() + "rd";
             default:
                 return ind.ToString() + "th";
         }
