--- a/InplayBet.Web/Views/Home/Index.cshtml
+++ b/InplayBet.Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="main-container">
     <div class="container">
         <h1 class="heading">Welcome to Inplay<span class="grn-bg">20</span><span class="thin">.com</span></h1>
-        <p class="home">Welcome to our FREE TO USE, £20-£1000 challenge system. This website is the first of its kind and we do not charge any fees to join and no fees to play. Our system allows you to track your inplay £20-£1000 challenges. It also allows you view follower other members challenges and see a list of latest inplay bets, in realtime format.</p>
+        <p class="home">Welcome to our FREE TO USE, £20-£1000 challenge system. This website is the first of its kind and we do not charge any fees to join and no fees to play. Our system allows you to track your inplay £20-£1000 challenges. It also allows you follow other members challenges and see a list of latest inplay bets, in realtime format.</p>
         <p class="home">Are you good enough to complete the £20-£1000 challenge, or do you want to follow others and pick up some great tips for your own inplay betting? Our system allows you to keep an eye on people who can make profit and shows how many challenges have been won and how many have been lost.</p>
         <p class="home">Please note, this website is not offering any cash prizes and is to be used in conjunction with an inplay betting account. Any betting that occurs from using our website is done at the users own risk.</p>
         <p></p>
